change title in index

--- a/app/Views/index.html
+++ b/app/Views/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>123</title>
+    <title>NScaff</title>
   </head>
   <style>
     p,
